# aideck-esp-firmware

./: CMakeLists.txt  Makefile  README.md  module.json  sdkconfig
.github/workflows/: CI.yml  release.yml
main/: CMakeLists.txt  aideck_esp_main.c  com.c  com.h  cpx.c  cpx.h  discovery.c  discovery.h  esp_transport.c  esp_transport.h  led.c  led.h  router.c  router.h  routing_info.h  spi_transport.c  spi_transport.h  state.c  state.h  system.c  system.h  test.c  test.h  uart_transport.c  uart_transport.h  wifi.c  wifi.h
