idf_component_register(SRCS "wifi.c"
                            "test.c"
                            "com.c"
                            "router.c"
                            "uart_transport.c"
                            "aideck_esp_main.c"
                            "led.c"
                            "spi_transport.c"
                            "led.c"
                            "esp_transport.c"
                            "cpx.c"
                            "system.c"
                            "discovery.c"
                        INCLUDE_DIRS "")
